--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token" : "MTAyODI0OTQwNDAwMTUwNTMyMQ.GE0SuO.GsDNI82n7DMYSbVUhuTCQwQCUUf5Hks8P5AYvw",
+    "token" : "MTAyODI0OTQwNDAwMTUwNTMyMQ.GSLmLz.PcAnnzHJN2rvl5VJAF0HuwjAVpakkaw908dsUw",
     "prefix" : "/"
 }
