--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token" : "MTAyODI0OTQwNDAwMTUwNTMyMQ.GSLmLz.PcAnnzHJN2rvl5VJAF0HuwjAVpakkaw908dsUw",
-    "prefix" : "/"
-}
+    "token" : "MTAzMjI1NDkyMTc1MzUwMTc1Nw.GjZznC.TXwp5iorKf_GCLMr-09UAtsZ2aN4PTzg6p_elc",
+    "color" : "#000000"
+}   
