--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
-    "@discordjs/rest": "^1.3.0",
-    "discord.js": "^14.5.0",
-    "fs": "^0.0.1-security"
+    "better-sqlite3": "^7.6.2",
+    "discord.js": "^14.6.0",
+    "nodemon": "^2.0.20",
+    "quick.db": "^9.0.6",
+    "quickdb": "^1.0.5"
   },
   "scripts": {
     "start": "node index.js"
