--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token" : "MTAzMjI1NDkyMTc1MzUwMTc1Nw.GjZznC.TXwp5iorKf_GCLMr-09UAtsZ2aN4PTzg6p_elc",
+    "token" : "ton",
     "color" : "#000000"
 }   
